tests/unit-fail-compilation/j020a.c.ref
j020a.c:4:7: error: Declaration has initializer but incomplete type.
  Constraint violation (CV-TDG8). See C11 sec. 6.7.9:3
Translation failed (config dumped). Run kcc -d j020a.c to see commands run.
