tests/unit-fail-compilation/j020a.c
struct s s0;

int main(void){
      struct s s1 = s0;
      return 0;
}

struct s {
      int x;
};
